<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="org.tangaya.rafiqulhuffazh.viewmodel.MurojaahViewModel" />
    </data>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="vertical"
        android:padding="15dp"
        tools:context=".murojaah.MurojaahFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/murojaah_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Muroja'ah"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/murojaah_title"
                        android:text="@{`Surat ` + viewmodel.surahName, default=`Surat 10. Taha`}" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewmodel.serverStatus, default=`[server status]`}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="30dp">

                <TextView
                    android:id="@+id/ayah_num_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{`Ayat ` + viewmodel.ayahNum, default=`Ayat 1`}"
                    android:textSize="32dp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center_horizontal"
                    android:text="ketuk untuk memutar audio"
                    android:textSize="12dp"
                    android:visibility="@{viewmodel.hintVisibility}"
                    android:onClick="@{() -> viewmodel.playVerse() }"/>

                <TextView
                    android:id="@+id/hint_text"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="center_horizontal"
                    android:text="@{viewmodel.ayahText, default=`بِسْمِ اللهِ الرَّحْمٰنِ الرَّحِيْمِ`}"
                    android:textSize="24dp"
                    android:visibility="@{viewmodel.hintVisibility}"
                    android:onClick="@{() -> viewmodel.playVerse() }"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewmodel.isRecording ? `recording ...` : ``}" />

                <TextView
                    android:id="@+id/instruction_murojaah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewmodel.isRecording ? @string/recording_true : @string/recording_false}" />

            </LinearLayout>

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/cancel_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@id/record_button_murojaah"
                android:clickable="@{viewmodel.isRecording ? true : false}"
                android:onClick="@{() -> viewmodel.cancelRecording()}"
                android:src="@{viewmodel.isRecording ? @drawable/cancel_black_100 : @drawable/cancel_grey_100}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/record_button_murojaah"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/cancel_icon"
                android:layout_alignRight="@id/cancel_icon"
                android:layout_below="@id/cancel_icon"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="cancel"
                android:textColor="#000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/record_button_murojaah"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cancel_icon" />

            <ImageView
                android:id="@+id/record_button_murojaah"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:layout_margin="25dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> viewmodel.onClickRecord()}"
                android:src="@{viewmodel.isRecording ? @drawable/arrow_black_100 : @drawable/mic_black_100}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/hint_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@+id/record_button_murojaah"
                android:clickable="@{viewmodel.isHintRequested ? false : true}"
                android:onClick="@{() -> viewmodel.showHint()}"
                android:src="@{viewmodel.isHintRequested ? @drawable/eye_grey_100 : @drawable/eye_black_100}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/record_button_murojaah"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/hint_icon"
                android:layout_below="@id/hint_icon"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="hint"
                android:textColor="#000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/record_button_murojaah"
                app:layout_constraintTop_toBottomOf="@+id/hint_icon" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.LinearLayoutCompat>

</layout>
