<resources>
    <string name="app_name">Rafiqul Huffazh</string>
    <string name="recording_true">tekan tombol lanjut untuk berhenti merekam</string>
    <string name="recording_false">tekan tombol rekam dan mulai membaca ayat</string>
    <string name="about_description">Sebuah aplikasi mobile dengan teknologi Automatic Speech Recognition (ASR) untuk membantu muroja\'ah hafalan Al Quran</string>
    <string name="about_contact">Hubungi pengembang di mal.qurany@gmail.com</string>

    <string name="CURRENT_CHAPTER_NUM">chapternum</string>
    <string name="server_ip">0.0.0.0</string>
    <string name="server_port">-1</string>

</resources>
