<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="org.tangaya.rafiqulhuffazh.viewmodel.SurahSelectionViewModel"/>
    </data>

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/surahs_recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:adapter="@{viewModel.adapter}"
        app:data="@{viewModel.data}"
        tools:context="org.tangaya.rafiqulhuffazh.view.ui.SurahSelectionActivity"/>
</layout>