<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="org.tangaya.rafiqulhuffazh.viewmodel.ServerSettingViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hostname"/>

            <EditText
                android:id="@+id/hostname_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="hostname"
                android:text="@={viewmodel.hostname, default=`192.168.1.217`}"
                android:inputType="text"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Port"/>

            <EditText
                android:id="@+id/port_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="port"
                android:text="@={viewmodel.port, default=8888}"
                android:inputType="number"
                android:singleLine="true"/>

            <Button
                android:id="@+id/connect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="connect"
                android:layout_marginTop="20dp"
                android:onClick="@{() -> viewmodel.connect()}"/>

            <TextView
                android:id="@+id/connection_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:text="@{viewmodel.connectionStatus, default=`[connection status]`}"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@{viewmodel.errorInfo, default=`[error info]`}"/>

        </LinearLayout>

        <Button
            android:id="@+id/save_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save"
            android:onClick="@{() -> viewmodel.saveSetting()}"/>

        <Button
            android:id="@+id/cancel_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:layout_marginBottom="20dp"
            android:onClick="@{() -> viewmodel.cancelSetting()}"/>

    </LinearLayout>

</layout>
