...
                android:paddingRight="5dp"
                android:text="@{viewmodel.serverStatus, default=`connected`}"
                android:textColor="@{viewmodel.isConnected ? @color/green : @color/red}"
                android:onClick="@{() -> viewmodel.gotoServerSetting()}"/>

            <ImageView
                android:id="@+id/setting_button_home"
                android:layout_width="15dp"
                android:layout_height="20dp"
                android:src="@drawable/settings_50"
                android:onClick="@{() -> viewmodel.gotoServerSetting()}"/>
        </LinearLayout>

...
